update:Make sure tree-picker prepend icon vertical align center.

--- a/styles/check-tree-picker.less
+++ b/styles/check-tree-picker.less
@@ -1,5 +1,6 @@
 @import "common";
 @import "mixins/checkbox";
+@import "mixins/tree-picker";
 
 // Check Tree Picker
 // ----------------------
@@ -218,6 +219,10 @@
       margin-left: 0;
       margin-top: 0;
     }
+  }
+
+  > .@{ctpns}-view-custom-icon {
+    .node-item-prepend-icon;
   }
 }
 
