--- a/styles/tree-picker.less
+++ b/styles/tree-picker.less
@@ -1,4 +1,5 @@
 @import "common";
+@import "mixins/tree-picker";
 
 // Tree Picker
 // ----------------------
@@ -96,6 +97,10 @@
       margin-left: 0;
       margin-top: 0;
     }
+  }
+
+  > .@{tpns}-view-custom-icon {
+    .node-item-prepend-icon;
   }
 }
 
